Fix progress bar not showing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -54,6 +54,7 @@
 }
 
 .app-toolbar-container {
+  position: relative;
   background-color: $color-primary;
   color: white;
 }
